--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ h1 {
     color: orange;
 }
 
-section {
+.flexible-container {
     display: flex;
     margin-bottom: 160px;
 }
@@ -20,7 +20,6 @@ section {
 .half-width {
     width: 50%;
     padding-left: 1%;
-    padding center: 20%;
 }
 
 .half-width image {
@@ -29,8 +28,8 @@ section {
 
 .link-button {
     text-decoration: none;
-    background-color: linear-gradient(tomato, orange);
-    color: black;
+    background-image: linear-gradient(tomato, orange);
+    color: blue;
     font-weight: 700;
     padding: 10px 40px;
     border-radius: 6px;
@@ -44,4 +43,28 @@ section {
 .dream-big {
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
+    background-position: right;
+}
+
+.experience-area {
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+}
+
+.experience-item {
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding: 10;
+    border-radius: 10px;
+    box-shadow: 10px 10px 40px gray;
+    border-left: 10px solid blue;
+}
+
+#full-stack-developer {
+    border-left: 7px solid tomato;
+}
+
+footer p {
+    text-align: center;
 }
